tests/functional/lang/eval-fail-derivation-name.err.exp
error:
       … while evaluating the attribute 'outPath'
         at «nix-internal»/derivation-internal.nix:<number>:<number>:
     <number>|     value = commonAttrs // {
     <number>|       outPath = builtins.getAttr outputName strict;
             |       ^
     <number>|       drvPath = strict.drvPath;

       … while calling the 'getAttr' builtin
         at «nix-internal»/derivation-internal.nix:<number>:<number>:
     <number>|     value = commonAttrs // {
     <number>|       outPath = builtins.getAttr outputName strict;
             |                 ^
     <number>|       drvPath = strict.drvPath;

       … while calling the 'derivationStrict' builtin
         at «nix-internal»/derivation-internal.nix:<number>:<number>:
     <number>|
     <number>|   strict = derivationStrict drvAttrs;
             |            ^
     <number>|

       … while evaluating derivation '~jiggle~'
         whose name attribute is located at /pwd/lang/eval-fail-derivation-name.nix:<number>:<number>

       error: invalid derivation name: name '~jiggle~' contains illegal character '~'. Please pass a different 'name'.
